Api terminada con sus controladores consumiendo los servicios

--- a/SistemaVentas.APA/appsettings.json
+++ b/SistemaVentas.APA/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaSQL": "Server=(local); Database=DBVENTA;Trusted_Connection=True;TrustServerCertificate=True;"
+    "CadenaSQL": "Data Source=(local)\\SQLEXPRESS01;Initial Catalog=DBVENTA;User Id=sa;Password=123;Integrated Security=true;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=True;"
   }
 }
